2004-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/latex-lilypond-example.latex:
	* Documentation/user/latex-example.latex: Fix compile errors.
	Still buggy, need more love.

2004-09-27  Werner Lemberg  <wl@gnu.org>

	* tex/lilyponddefs.tex (\lilypondstart): Use \frenchspacing.

2004-09-26  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/examples.itely: removed \midi block to
	simplify the example

	* Documentation/user/notation.itely: Removed superfluous
	TextSpanner tweakings (is already done by engraver-init.ly).
	Documented bug: vertical alignment of articulations.

	* Documentation/user/notation.itely, ly/engraver-init.ly
	(VaticanaVoice, GregorianTranscriptionVoice): Bugfix: TextSpanner
	padding.

	* Documentation/user/notation.itely, ly/engraver-init.ly: moved
	docu about TextSpanner padding bug from manual to engraver.ly
	(since it's workarounded and hence not user-visible any more)

2004-09-26  Graham Percival  <gperlist@shaw.ca>

	* ly/property-init.ly: fix bug in displaying ledger lines while
	\hideNotes is on.

	* Documentation/user/notation.itely: more editing.

	* Documentation/user/examples.itely: add piano-dynamics template.

	* input/template/piano-dynamics.ly: remove.

	* Documentation/user/sound-output.itexi: more editing

2004-09-25  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: more editing.

2004-09-25  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/ly-from-scheme.scm (read-lily-expression): use ~s in format
	instead of ~a, to get #{ #"foo" #} actually printed to #"foo".

2004-09-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/hairpin.cc (print): check columns of bounds, not bounds
	themselves.
	(print): robustify bound-padding lookup.

	* lily/*: ly_c[ad]+r -> scm_XXX , ly_c_pair_p -> scm_is_pair.

	* scripts/lilypond-book.py (Compile_error.process_include): catch
	Compile_error exception, and remove output .texi.

	* scm/define-music-properties.scm (all-music-properties): add